--- a/.github/workflows/build-android12.yml
+++ b/.github/workflows/build-android12.yml
@@ -18,9 +18,8 @@ jobs:
         include:
           - version: 5.10.209
             tag: android12-5.10
-            patch-level: 2024-05
+            patch-level: 2024-08
             arch: aarch64
-            end: r13
   
     steps:
       - name: Maximize build space
@@ -42,7 +41,7 @@ jobs:
         with:
           arch: ${{ matrix.arch }}
           tag: ${{ matrix.tag }}-${{ matrix.patch-level }}
-          simple-tag: ${{ matrix.tag }}_${{ matrix.end }}
+          simple-tag: ${{ matrix.tag }}
           version: ${{ matrix.version }}
           fast_build: false
           module-name: ovo
