--- a/action.yml
+++ b/action.yml
@@ -156,8 +156,10 @@ runs:
       working-directory: android-kernel
       run: |
         repo status
-        sed -i '/"protected_exports_list": "android\/abi_gki_protected_exports_aarch64",/d' common/BUILD.bazel
-        rm common/android/abi_gki_protected_exports_* || echo "No protected exports!"
+        if [[ "${{ inputs.simple-tag }}" != "android16-6.12" ]]; then
+          sed -i '/"protected_exports_list": "android\/abi_gki_protected_exports_aarch64",/d' common/BUILD.bazel
+          rm common/android/abi_gki_protected_exports_* || echo "No protected exports!"
+        fi
         git config --global user.email "bot@github.actions.org"
         git config --global user.name "github.actions"
         cd common/ && git add -A && git commit -a -m "Add Kernel Module"
